--- a/Raziel/Raziel.csproj
+++ b/Raziel/Raziel.csproj
@@ -48,4 +48,8 @@
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Raziel.Core\Raziel.Core.csproj" />
+	</ItemGroup>
+
 </Project>
